# unitree-g1-colab-ik

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: run_unitree_g1_colab_ik.py  run_unitree_hermes_agent_lab.py  unitree_g1_colab_ik_bench.ipynb  unitree_hermes_agent_lab.ipynb
skill/unitree-hermes-colab/: SKILL.md
skill/unitree-hermes-colab/agents/: openai.yaml
skill/unitree-hermes-colab/scripts/: check_lab_artifacts.py
src/unitree_colab_ik/: __init__.py  benchmark.py  cli.py  hermes_cli.py  hermes_lab.py  kinematics.py  urdf.py
tests/: test_benchmark.py  test_cli.py  test_hermes_lab.py  test_kinematics.py  test_urdf_parser.py
tests/fixtures/: g1_arm_fixture.urdf
